--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,31 +3,28 @@ version: '3.8'
 services:
   backend:
     build: .
-    container_name: go_backend
     ports:
       - "8080:8080"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     env_file:
       - .env
     networks:
-      - backend_network
+      - rewards_network
 
   db:
-    image: postgres:13
-    container_name: postgres_db
+    image: postgres:15
     env_file:
       - .env
-    volumes:
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
     networks:
-      - backend_network
+      - rewards_network
 
 networks:
-  backend_network:
+  rewards_network:
     external: true
